Fix Range dropdown issue on Firefox

--- a/css/style.css
+++ b/css/style.css
@@ -7952,7 +7952,7 @@ h6 {
     padding: 0;
     margin: 0; }
   .graph-info__range {
-    display: inline-block;
+    display: table;
     z-index: 1;
     width: 43px;
     height: fit-content;
