--- a/sass/partials/content/_graph-info.scss
+++ b/sass/partials/content/_graph-info.scss
@@ -82,7 +82,7 @@
 	}
 	
 	&__range {
-		display: inline-block;
+		display: table;
 		z-index: 1;
 		width: 43px;
 		height: fit-content;
